TestSuite/errors/err0332_set_invalid_type.pas
var r: real;

begin
  var s: set of integer;
  s := [2,4,r];
  Print(s);
end.